--- a/wp-content/themes/salient/css/style64dd.css
+++ b/wp-content/themes/salient/css/style64dd.css
@@ -16317,7 +16317,7 @@ body:not(.material) #slide-out-widget-area .off-canvas-social-links li a,
   margin-bottom:8px
 }
 #slide-out-widget-area .inner >div{
-  margin-bottom:25px
+  ../../index.htmlpx
 }
 #slide-out-widget-area .inner >div:first-of-type{
   margin-top:-7px
